# 113-domain-adaptation-finance

./: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: basic_adaptation.rs  cross_market.rs  trading_strategy.rs
python/: __init__.py  backtest.py  data_loader.py  domain_adapter.py  requirements.txt
src/: lib.rs
src/adaptation/: coral.rs  dann.rs  mmd.rs  mod.rs
src/backtest/: engine.rs  mod.rs
src/model/: mod.rs  network.rs
src/trading/: mod.rs  signals.rs  strategy.rs
