[package]
name = "domain_adaptation_trading"
version = "0.1.0"
edition = "2021"
description = "Domain Adaptation for Finance - Adapting Trading Models Across Markets with Bybit"
license = "MIT"
authors = ["ML Trading Team"]

[lib]
name = "domain_adaptation_trading"
path = "src/lib.rs"

[[example]]
name = "basic_adaptation"
path = "examples/basic_adaptation.rs"

[[example]]
name = "cross_market"
path = "examples/cross_market.rs"

[[example]]
name = "trading_strategy"
path = "examples/trading_strategy.rs"

[dependencies]
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
rand_distr = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
statrs = "0.16"

[dev-dependencies]
tokio-test = "0.4"
approx = "0.5"

[features]
default = []
simulation = []
